[f] videoconference integrated with sidetime platform

--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-  "name": "react-video-sdk-demo",
-  "version": "1.10.0",
-  "private": true,
+  "name": "sidetime-session",
+  "version": "1.10.2",
+  "description": "Based on Zoom Video SDK",
   "dependencies": {
     "@ant-design/icons": "4.6.2",
+    "@rollup/plugin-terser": "^0.4.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "@zoom/videosdk": "^1.10.0",
     "antd": "4.24.3",
     "classnames": "^2.2.6",
-    "crypto-js": "^4.2.0",
     "immer": "^9.0.6",
-    "js-base64": "^3.6.0",
-    "jsrsasign": "^10.5.26",
     "lodash": "^4.17.21",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "1.1.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "peerDependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "trace-error": "tsc --traceResolution"
   },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -48,26 +56,30 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-sucrase": "^5.0.2",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@svgr/rollup": "^8.1.0",
     "@types/classnames": "^2.2.11",
-    "@types/crypto-js": "^4.0.1",
     "@types/jest": "^26.0.21",
-    "@types/jsrsasign": "^8.0.10",
     "@types/lodash": "^4.14.168",
+    "@types/node": "^20.10.5",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "copy-webpack-plugin": "6.2.1",
-    "customize-cra": "1.0.0",
     "eslint-config-alloy": "^4.6.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.6.2",
-    "react-app-rewired": "2.2.1",
+    "rollup": "^4.9.1",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "sass": "1.32.8",
     "sass-loader": "10.1.1",
-    "typescript": "^4.3.5",
-    "write-file-webpack-plugin": "4.5.1"
+    "typescript": "^4.3.5"
   }
 }
